# MSD-Team-Rocket

./: .coverage  .gitignore  .google-cookie  MSD-Team-Rocket.py  MSD-Team-Rocket_psg.py  Main.py  README.md  Web.py  WebScraper.py  bookParser.py  classification.py  demofile2.txt  github_history  imdbParser.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: tests.yml
src/: Web.py  bookParser.py  demo.py
src/gui/: gui.py  gui.txt
src/rocket/: Web.py  bookParser.py  classification.py  demo.py  doctor_Rocket.txt  eliza_Rocket.py  gui.py  imdbParser.py  test.py  video.py
src/rocket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: .coverage  conftest.py  test_BookParser.py  test_Classification.py  test_IMDBParser.py  test_Web.py
