[metadata]
name = rocket
decription = a project for parsing web pages
author = Team Rocket
platforms = unix, linus, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10.2

[options]
package =
    rocket
install_requires =
    requests>=2
    beautifulsoup4>=4
    prettytable>=3
    nltk>=3
    lxml>=4
python_requires = >=3.6
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3
    mypy>=.931
    flake8>=4.0

[option.package_data]
rocket = py.typed

[flake8]
max-line-length = 160